# geospatial-analysis-sensing

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.json
.claude/agents/api-integration/: AGENT.md
.claude/agents/backend-engineering/: AGENT.md
.claude/agents/carbon-accounting/: AGENT.md
.claude/agents/data-processing/: AGENT.md
.claude/agents/devops-infrastructure/: AGENT.md
.claude/agents/forestry-expert/: AGENT.md
.claude/agents/frontend-engineering/: AGENT.md
.claude/agents/gis-spatial/: AGENT.md
.claude/agents/lidar-processing/: AGENT.md
.claude/agents/ml-model-ops/: AGENT.md
.claude/agents/performance-testing/: AGENT.md
.claude/agents/qa-testing/: AGENT.md
.claude/agents/regulatory-compliance/: AGENT.md
.claude/agents/report-generation/: AGENT.md
.claude/agents/security-testing/: AGENT.md
.claude/agents/ux-product/: AGENT.md
.claude/commands/: analyze-lidar.md  deploy.md  generate-report.md  run-tests.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  INSTALLATION.md  INTEGRATIONS.md  PRODUCT_OWNER_GUIDE.md  SOFTWARE_DEVELOPMENT_PLAN.md  TROUBLESHOOTING.md  subagent-specifications.md
scripts/: init-db.sql
sdks/javascript/: README.md  package.json
sdks/javascript/src/: index.ts
sdks/python/: README.md  pyproject.toml
sdks/python/lidarforest/: __init__.py  client.py  exceptions.py  models.py  webhooks.py
src/backend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  jest.config.js  openapi.yaml  package.json  tsconfig.json
src/backend/prisma/: schema.prisma
src/backend/src/: index.ts
src/backend/src/__tests__/: setup.ts
src/backend/src/config/: database.ts  index.ts  logger.ts  queue.ts  redis.ts
src/backend/src/jobs/: fileProcessing.job.ts  index.ts  reportGeneration.job.ts  speciesClassification.job.ts
src/backend/src/middleware/: auth.ts  errorHandler.ts  ratelimit.ts
src/backend/src/routes/: analyses.ts  apikeys.ts  auth.ts  comments.ts  export.routes.ts  files.ts  index.ts  notifications.ts  organizations.ts  projects.ts  reports.ts  species.ts  stands.routes.ts  viewer.ts  volume.routes.ts  webhooks.ts
src/backend/src/services/: apikey.service.ts  auth.service.ts  comment.service.ts  export.service.ts  file.service.ts  index.ts  notification.service.ts  organization.service.ts  processing.service.ts  project.service.ts  report.service.ts  species.service.ts  speciesExport.service.ts  speciesFeedback.service.ts  stand.service.ts  user.service.ts  viewer.service.ts  volume.service.ts  webhook.service.ts
src/backend/src/types/: dto.ts  index.ts  processing.ts  report.ts  species.ts  viewer.ts
src/frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/frontend/src/api/: auth.ts  client.ts  files.ts  index.ts  processing.ts  projects.ts  reports.ts  species.ts  viewer.ts
src/frontend/src/components/: CreateProjectModal.tsx  Layout.tsx
src/frontend/src/pages/: Dashboard.tsx  ForgotPassword.tsx  Login.tsx  ProjectDetail.tsx  Projects.tsx  Register.tsx  Reports.tsx  ResetPassword.tsx  Viewer.tsx
src/frontend/src/store/: index.ts  (+7 more)
src/mobile/: App.tsx  README.md  package.json  tsconfig.json
src/processing/: Dockerfile  pyproject.toml
src/processing/src/lidar_processing/: __init__.py  config.py  main.py  models.py
src/processing/src/lidar_processing/services/: __init__.py  allometric_equations.py  batch_classifier.py  carbon_report_generator.py  carbon_stock_estimator.py  change_detector.py  chart_generator.py  confidence_calibrator.py  excel_generator.py  feature_extractor.py  feedback_collector.py  fia_report_generator.py  ground_classifier.py  growth_projection.py  height_normalizer.py  lidar_validator.py  metadata_extractor.py  model_validator.py  pdf_generator.py  point_extractor.py  report_generator.py  spatial_exporter.py  species_classifier.py  species_config.py  stand_analyzer.py  stand_delineator.py  timber_valuation.py  time_series_analyzer.py  training_pipeline.py  tree_detector.py  tree_metrics.py
src/processing/src/lidar_processing/workers/: __init__.py  processing_worker.py  queue_worker.py
src/processing/src/processing/: __init__.py  worker.py
src/processing/src/processing/algorithms/: __init__.py  watershed.py
src/processing/src/processing/models/: __init__.py  tree.py
src/processing/src/processing/pipelines/: __init__.py  chm_generation.py  ground_classification.py  tree_detection.py
src/processing/src/processing/utils/: __init__.py  las_reader.py
src/processing/tests/: __init__.py  test_tree_detection.py
src/processing/tests/test_lidar_processing/: __init__.py  conftest.py  test_api.py  test_ground_classifier.py  test_height_normalizer.py  test_metadata_extractor.py  test_processing_worker.py  test_tree_detector.py  test_tree_metrics.py  test_validator.py
(+129 files in other folders)
