[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lidarforest"
version = "1.0.0"
description = "Official Python SDK for the LiDAR Forest Analysis API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "LiDAR Forest", email = "sdk@lidarforest.com" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
keywords = ["lidar", "forest", "analysis", "sdk", "api", "geospatial"]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://lidarforest.com"
Documentation = "https://docs.lidarforest.com/sdk/python"
Repository = "https://github.com/lidarforest/sdk-python"

[tool.hatch.build.targets.sdist]
include = [
    "/lidarforest",
]

[tool.hatch.build.targets.wheel]
packages = ["lidarforest"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
