[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lidar-forest-analysis"
version = "0.1.0"
description = "LiDAR Forest Analysis Platform - Processing Pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "LiDAR Forest Analysis Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "laspy>=2.5.0",
    "pdal>=3.2.0",
    "scikit-learn>=1.3.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    # LiDAR Processing Service (Sprint 5-6)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    # Report Generation (Sprint 11-12)
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.8.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
lidar-worker = "processing.worker:main"
lidar-api = "lidar_processing.main:main"
lidar-queue-worker = "lidar_processing.workers.queue_worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/processing", "src/lidar_processing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]

[tool.ruff.lint.isort]
known-first-party = ["processing", "lidar_processing"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "laspy.*",
    "pdal.*",
    "rasterio.*",
    "shapely.*",
    "redis.*",
    "httpx.*",
]
ignore_missing_imports = true
